force-app/main/default/objects/User/fields/CL_Collections__c.field-meta.xml
<CustomField>
    <fullName>CL_Collections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CL Collections</label>
    <type>Checkbox</type>
</CustomField>