force-app/main/default/objects/User/fields/CL_MKT__c.field-meta.xml
<CustomField>
    <fullName>CL_MKT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CL MKT</label>
    <type>Checkbox</type>
</CustomField>