force-app/main/default/objects/User/fields/CLL__c.field-meta.xml
<CustomField>
    <fullName>CLL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLL</label>
    <type>Checkbox</type>
</CustomField>