force-app/main/default/objects/User/fields/CLO__c.field-meta.xml
<CustomField>
    <fullName>CLO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLO</label>
    <type>Checkbox</type>
</CustomField>