force-app/main/default/objects/User/fields/loan__Current_Branch__c.field-meta.xml
<CustomField>
    <fullName>loan__Current_Branch__c</fullName>
    <label>Current Branch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>