force-app/main/default/objects/User/fields/loan__Current_Branch_s_System_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Current_Branch_s_System_Date__c</fullName>
    <label>Current Branch&apos;s System Date</label>
    <type>Date</type>
</CustomField>