force-app/main/default/objects/User/fields/loan__Default_Branch__c.field-meta.xml
<CustomField>
    <fullName>loan__Default_Branch__c</fullName>
    <label>Default Branch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>