force-app/main/default/objects/User/fields/PayOff_Department__c.field-meta.xml
<CustomField>
    <fullName>PayOff_Department__c</fullName>
    <label>PayOff Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Accounting</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Member Experience</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>