force-app/main/default/objects/User/validationRules/loan__Teller_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Teller_Check</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Is_Teller__c &amp;&amp; ISBLANK( loan__Teller_GL__c )</errorConditionFormula>
    <errorMessage>GL must be entered for a teller.</errorMessage>
</ValidationRule>