force-app/main/default/objects/User/listViews/genesis__AllUsers.listView-meta.xml
<ListView>
    <fullName>genesis__AllUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Membership Team Advocate,Membership Team Manager</value>
    </filters>
    <label>MX users</label>
</ListView>