force-app/main/default/objects/User/listViews/Member_User.listView-meta.xml
<ListView>
    <fullName>Member_User</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>equals</operation>
        <value>serviceapi@happymoney.com</value>
    </filters>
    <label>Member User</label>
</ListView>